--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <img src="./images/header-logo.svg" alt="лого" class="header__logo">
+      <img src="./images/header/header-logo.svg" alt="лого" class="header__logo">
         <div class="header__lang-links">
           <a href="#" target="_self" class="header__lang-link header__lang-link_active">Ru</a>
           <a href="#" target="_self" class="header__lang-link">En</a>
@@ -20,7 +20,7 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__figure">
-          <img src="./images/lead-polka.jpg" alt="Путешествие на поезде" class="lead__image">
+          <img src="./images/lead/lead-polka.jpg" alt="Путешествие на поезде" class="lead__image">
         <figcaption class="lead__caption">ваша полка — верхняя.</figcaption>
         </figure>
       </section>
@@ -40,18 +40,18 @@
         </ul>
       </section>
       <section class="photo-grid">
-        <img src="./images/photo-grid-train.jpg" alt=" фото в поезду" class="photo-grid__item">
-        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="фото гор" class="photo-grid__item">
-        <img src="./images/photo-grid-tuman.jpg" alt="фото природы в тумане" class="photo-grid__item">
-        <img src="./images/photo-grid-sochi.jpg" alt="фото леса в сочи" class="photo-grid__item">
-        <img src="./images/photo-grid-arisa.jpg" alt="фото льда" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal.jpg" alt="фото байкала" class="photo-grid__item">
-        <img src="./images/photo-grid-elbrus.jpg" alt="фото эльбруса" class="photo-grid__item">
-        <img src="./images/photo-grid-kondratiev.jpg" alt="фото пешеходный знак" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-1.jpg" alt="фото камчатки 1" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-2.jpg" alt="фото камчатки 2" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal-2.jpg" alt=" фото байкала 2" class="photo-grid__item">
-        <img src="./images/photo-grid-ergaki.jpg" alt="фото гор" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-train.jpg" alt="фото в поезде" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="фото гор" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="фото природы в тумане" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="фото леса в сочи" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="фото льда" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="фото байкала" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="фото эльбруса" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="фото пешеходный знак" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="фото камчатки 1" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="фото камчатки 2" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt=" фото байкала 2" class="photo-grid__item">
+        <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="фото гор" class="photo-grid__item">
       </section>
       <section class="places">
         <article class="place">
@@ -60,7 +60,7 @@
             <p class="place__url-heading">URL</p>
             <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
           </div>
-          <img src="./images/place-kosa.jpg" alt="фото куршской косы" class="place__image">
+          <img src="./images/place/place-kosa.jpg" alt="фото куршской косы" class="place__image">
           <div class="place__main-text">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
           <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -72,7 +72,7 @@
             <p class="place__url-heading">URL</p>
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__link">National Geographic</a>
           </div>
-          <img src="./images/place-kolsky.jpg" alt="фото кольского полуострова" class="place__image">
+          <img src="./images/place/place-kolsky.jpg" alt="фото кольского полуострова" class="place__image">
           <div class="place__main-text">
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -86,7 +86,7 @@
             <p class="place__url-heading">URL</p>
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__link">Facebook</a>
           </div>
-          <img src="./images/place-altai.jpg" alt="фото алтая" class="place__image">
+          <img src="./images/place/place-altai.jpg" alt="фото алтая" class="place__image">
           <div class="place__main-text">
             <p class="place__paragraph">Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -99,7 +99,7 @@
             <p class="place__url-heading">URL</p>
             <a href="https://vk.com/baikalmile" target="_blank" class="place__link">https://vk.com/baikalmile</a>
           </div>
-          <img src="./images/place-winter-baikal.jpg" alt="фото зимнего байкала" class="place__image">
+          <img src="./images/place/place-winter-baikal.jpg" alt="фото зимнего байкала" class="place__image">
           <div class="place__main-text">
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -112,7 +112,7 @@
             <p class="place__url-heading">URL</p>
             <a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
           </div>
-          <img src="./images/place-karelia.jpg" alt=" фото карелии" class="place__image">
+          <img src="./images/place/place-karelia.jpg" alt=" фото карелии" class="place__image">
           <div class="place__main-text">
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
