--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>russian-travel</title>
+  <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="body">
@@ -28,15 +28,11 @@
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li><p class="intro__vary">Часовых поясов<span class="intro__span-accent">11</span></p></li>
-          <li><p class="intro__vary">Объектов природного наследия ЮНЕСКО<span class="intro__span-accent">12</span></p>
-          </li>
-          <li><p class="intro__vary">Объектов культурного наследия ЮНЕСКО<span class="intro__span-accent">16</span></p>
-          </li>
-          <li><p class="intro__vary">Природных заповедников<span class="intro__span-accent">105</span></p>
-          </li>
-          <li><p class="intro__vary">Аэропортов<span class="intro__span-accent">241</span></p>
-          </li>
+          <li><span class="intro__span-accent">Часовых поясов</span> 11</li>
+          <li><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО</span> 12</li>
+          <li><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+          <li><span class="intro__span-accent">Природных заповедников</span> 105</li>
+          <li><span class="intro__span-accent">Аэропортов</span> 241</li>
         </ul>
       </section>
       <section class="photo-grid">
